--- a/index.html
+++ b/index.html
@@ -9,23 +9,44 @@
     <h1>A Tribute to Martin Luther King</h1>
     <img src="ing/Martin_Luther_King,_Jr..jpg" alt="" width="600px" />
 
-    <p>blank1</p>
+    <p>
+      In the world of civil rights in The United States of America, there is
+      only one name that stands out above all others: Dr. Martin Luther King Jr.
+      His determination was unparalleled and his bravery unmatched, which is why
+      he’s become an iconic figure in United States history. He spent his life
+      fighting for equality between races, a goal that we are still working
+      towards to this day.
+    </p>
 
-    <h2>blank2</h2>
+    <h3 class="orange">about</h3>
     <ul>
-      <li>blank3</li>
+      <li>Martin Luther King Jr. was an African American Baptist minister</li>
       <li>
-        <a href="" target="blank">blank</a>
+        Dr. Martin Luther King Jr. was born January 15th, 1929, in Atlanta,
+        Georgia
       </li>
-      <li>blank4</li>
+      <li>assassinated in 1968</li>
     </ul>
 
-    <h2>blank5</h2>
+    <h2 class="orange">some of his acomplishments</h2>
+    <img src="ing/Martin-Luther-King-Jr.webp" alt="" width="600px" />
+
     <ol>
-      <li>lay out two slices of bread.</li>
-      <li>spread peanut butter on one slice.</li>
-      <li>spead jelly on the other slice.</li>
-      <li>put thr two slices together.</li>
+      <li>
+        visible spokesperson and leader in the American civil rights movement
+        from 1955 until 1968
+      </li>
+      <li>Established The March on Washington for Jobs and Freedom</li>
+      <li>He won the Nobel Peace Prize</li>
+      <li>helped to found the Montgomery Improvement Association</li>
     </ol>
+
+    <p>
+      <i
+        ><a href="https://www.drmartinlutherkingjr.com/" target="blank"
+          >learn more</a
+        ></i
+      >
+    </p>
   </body>
 </html>
